# fastsort

./: README.md  pyproject.toml  test_roughclust.py
roughclust/: __init__.py  src.py
